Bug 14699 - Samba does not build with gcc11
Summary: Samba does not build with gcc11
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.12.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-06 13:27 UTC by Guenther Deschner
Modified: 2021-06-01 07:26 UTC (History)
1 user (show)

See Also:


Attachments
patch for v4-14 (19.64 KB, patch)
2021-05-07 10:58 UTC, Guenther Deschner
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2021-05-06 13:27:31 UTC
When using gcc11 on Fedora34 (gcc (GCC) 11.1.1 20210428 (Red Hat 11.1.1-1)) the build fails to compile.
Comment 1 Jeremy Allison 2021-05-06 18:52:46 UTC
Compile log with errors please ? Or do you already have a patch ?
Comment 2 Guenther Deschner 2021-05-06 18:55:59 UTC
Sorry, I created MR: https://gitlab.com/samba-team/samba/-/merge_requests/1944 superseded by one more patch Andreas has in https://gitlab.com/samba-team/samba/-/merge_requests/1945, full set of fixes is there now and just completing hopefully in the pipeline.
Comment 3 Samba QA Contact 2021-05-07 07:19:06 UTC
This bug was referenced in samba master:

0e1695df7fe8952b5c503cf7ab1ff31784736988
17ae9974f36ce8929f0c50c357dd4f88fbf37d7c
8f12793ca5e7c9aa7c23a17400986878ae110e70
Comment 4 Guenther Deschner 2021-05-07 10:58:46 UTC
Created attachment 16606 [details]
patch for v4-14

backport from master to v4-14-test
Comment 5 Andreas Schneider 2021-05-07 12:10:06 UTC
Comment on attachment 16606 [details]
patch for v4-14

LGTM
Comment 6 Andreas Schneider 2021-05-07 12:11:10 UTC
Karolin, please apply the patchset to 4.14. Thanks!
Comment 7 Karolin Seeger 2021-05-12 08:15:55 UTC
(In reply to Andreas Schneider from comment #6)
Pushed to autobuild-v4-14-test.
Comment 8 Samba QA Contact 2021-05-12 09:08:05 UTC
This bug was referenced in samba v4-14-test:

657a1edd1b765504f026a50ef685b7b9e10ac59b
a18d6bdaa54adf31aeb5ae1b99453593d617477f
5611a6999c00e4fd6c4ff641765ede9a8bf35899
Comment 9 Samba QA Contact 2021-06-01 07:26:33 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.5):

657a1edd1b765504f026a50ef685b7b9e10ac59b
a18d6bdaa54adf31aeb5ae1b99453593d617477f
5611a6999c00e4fd6c4ff641765ede9a8bf35899